# poverlay

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.coolify.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  (+5 more)
app/: layouts.py  main.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/local-worker/: pyproject.toml
apps/local-worker/poverlay_worker/: __init__.py  api_client.py  dashboard.py  main.py  profiles.py  render.py  service.py  upload.py
apps/local-worker/pyinstaller/: launcher.py  poverlay-worker.spec
apps/local-worker/tests/: test_api_worker_integration.py  test_dashboard.py  test_profiles.py  test_progress_parser.py  test_service.py  test_upload.py
benchmark-results/: staging-render-2026-02-23.md
deploy/: COOLIFY.md  VPS.md
docs/: client-rendering-release-checklist.md  client-rendering-release-status.md  client-rendering.md
samples/: README.md
scripts/: backfill-r2-media-to-firestore.py  bootstrap-staging-vps.sh  check-client-rendering-release-readiness.sh  check.sh  deploy-vps.sh  generate-layout-previews.py  gopro-dashboard-local.sh  load-env.sh  notarize-macos-dmg.sh  package-macos-dmg.sh  run-api.sh  run-web.sh  run.sh  setup.sh  smoke-deployed-local-render.py  smoke-desktop-macos.sh  smoke-desktop-windows.ps1  smoke-local-render-http.py  stage-desktop-sidecar.mjs  staging-render-benchmark.py  sync-next-standalone.sh  verify-windows-signatures.ps1
(+63 files in other folders)
