[project]
name = "poverlay-local-worker"
version = "0.1.0"
description = "Local render worker for POVerlay desktop rendering."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.128.5",
  "gopro-overlay==0.129.0",
  "uvicorn==0.40.0",
  "python-multipart==0.0.22",
]

[project.scripts]
poverlay-worker = "poverlay_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
