[package]
name = "poverlay-desktop"
version = "0.1.0"
description = "POVerlay Desktop local render worker shell"
authors = ["POVerlay"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "poverlay_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
